# spyapps

s-bRAG-langchain/: main.py  pyproject.toml  requirements.txt
s-bRAG-langchain/notebooks/: [1]_rag_setup_overview.ipynb
s-haystack-book/: requirements.txt
s-haystack-book/chapter-2/: haystack_ch2.ipynb
s-production-agentic-rag-course/: Dockerfile  compose.yml  pyproject.toml
s-production-agentic-rag-course/airflow/: requirements-airflow.txt
s-production-agentic-rag-course/notebooks/week1/: week1_setup.ipynb
s-production-agentic-rag-course/src/: config.py  database.py  dependencies.py  main.py
s-production-agentic-rag-course/src/db/: factory.py
s-production-agentic-rag-course/src/db/interfaces/: base.py  postgresql.py
s-production-agentic-rag-course/src/repositories/: __init__.py  paper.py
s-production-agentic-rag-course/src/routers/: papers.py  ping.py
s-production-agentic-rag-course/src/schemas/: paper.py
