[project]
name = "s-brag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "cohere>=5.20.7",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.12",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langchainhub>=0.1.21",
    "langsmith==0.3.0",
    "numpy>=2.4.3",
    "pinecone>=7.3.0",
    "pydantic>=2.7.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "ragatouille>=0.0.9.post2",
    "tiktoken>=0.12.0",
    "youtube-transcript-api<1.0.0",
    "yt-dlp>=2026.3.3",
]
