[project]
name = "s-production-agentic-rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "ipykernel>=7.2.0",
    "opensearch-py>=2.4.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.8.0",
    "requests>=2.32.5",
    "sqlalchemy>=1.4.36,<=2.0.48",
    "uvicorn>=0.41.0",
]
